Changes to Version 3.0-13

  o Handle singularities better in Anova.mlm() (suggestion of Marius Barth).
  
  o Fixed error reporting in logit() (bug reported by Collin Erickson).

Changes to Version 3.0-12

  o The 'rio` package is now suggested, not required.  To use the Import() and Export() functions users may need to install rio using install.packages("rio")
  
  o hccm() now reports an interpretable error, except for type = "hc0" or "hc1", when there are cases with hatvalues = 1 (following problem reported by Peng Ding).
  
  o Fix bug in rownames in dfbetasPlots.lm() (reported by Shu Fai Cheun).

  o Package 'rio' was moved from Imports to Suggests. Both Import() and Export() now check for the availability of 'rio' first and report an error otherwise.

Changes to Version 3.0-11
  
  o boxCox() function now allows the use of any of the usual graphics parameters in the plot() function.  If particuar boxCox(model, main="my title") will add a title to the plot, and boxCox(model, main="") will suppress it.
  
  o car::Boot(object, method="residual") will work for method="residual" only if the car package has been previously attached via either library(car) or require(car).  
  
  o Added error checking with vcov. argument.  Changed vcov.boot to print a warning of bootstrap replicates that returned NA
  
  o Introduced brief.tbl(), which simply calls print(), to cope with changes to tibbles.
  
  o qqPlot() fills (shades) confidence envelopes by default, and smoothers for scatterplots fill variance (spread) envelopes by default (suggestions of Michael Friendly).
  
  o Fixed problem in infIndexPlot.influence.lme() (reported by Francis L. Huang).
  
  o New "polr" and "svyolr" methods for vif() (following report by Abra Jeffers).
  
  o Make linearHypothesis() and Anova() work with "svyolr" objects via their default methods.
  
  o Regularize handling of vcov. argument in Anova() and linearHypothesis().
  